--- a/src/app/shared/component/form-signup/form-signup.component.scss
+++ b/src/app/shared/component/form-signup/form-signup.component.scss
@@ -1,107 +1,133 @@
 .ng-form {
     display: flex;
     justify-content: center;
-    width: 800px;
     height: 400px;
     margin-bottom: 20px;
     background-color: green;
     overflow: hidden;
 
-    .ng-form-n1 {
-        width: 100%;
-        background-color: yellow;
-    }
+    // .ng-form-n1 {
+    //     width: 100%;
+    //     background-color: yellow;
+    // }
 
-    .ng-title {
-        text-align: center;
-        color: #ddd;
-        margin-bottom: 20px;
+    // .ng-title {
+    //     text-align: center;
+    //     color: #ddd;
+    //     margin-bottom: 20px;
 
-    }
+    // }
     
-    .ng-title span {
-        font-size: 15px;
-        margin-bottom: 20px;
-    }
+    // .ng-title span {
+    //     font-size: 15px;
+    //     margin-bottom: 20px;
+    // }
 
-    .ng-fieldset {
-        width: 350px;
-        padding: 7px;
-        border-radius: 5px;
-        margin-top: 20px;
+    // .ng-fieldset {
+    //     width: 350px;
+    //     padding: 7px;
+    //     border-radius: 5px;
+    //     margin-top: 20px;
         
         
-        legend {
-            font-size: 12px;
-            font-weight: 500;
-            color: #ddd;
-        }
+    //     legend {
+    //         font-size: 12px;
+    //         font-weight: 500;
+    //         color: #ddd;
+    //     }
 
-        .ng-input {
-            background-color: transparent;
-            outline: none;
-            border: 0;
-            width: 100%;
-            height: 20px;
-            font-size: 12px;
-            color: #eee;
-        }
+    //     .ng-input {
+    //         background-color: transparent;
+    //         outline: none;
+    //         border: 0;
+    //         width: 100%;
+    //         height: 20px;
+    //         font-size: 12px;
+    //         color: #eee;
+    //     }
 
 
 
-    }
+    // }
 
-    .ng-error {
-        width: 100%;
-        font-size: 12px;
-        color: #FF8401;
-        padding: 2px 5px;
-    }
+    // .ng-error {
+    //     width: 100%;
+    //     font-size: 12px;
+    //     color: #FF8401;
+    //     padding: 2px 5px;
+    // }
 
-    .ng-section-btn {
-        display: flex;
-        gap: 10px;
+    // .ng-section-btn {
+    //     display: flex;
+    //     gap: 10px;
 
-    }
+    // }
 
     
-    .ng-btn {
-        width: 100%;
-        height: 35px;
-        border-radius: 5px;
-        border: 1px solid #eee;
-        cursor: pointer;
-        font-family: var(--font-family);
-        font-size: 14px;
-        font-weight: 500;
-        background-color: #eee;
-        color: #592d74;
-        margin-top: 20px;
+    // .ng-btn {
+    //     width: 100%;
+    //     height: 35px;
+    //     border-radius: 5px;
+    //     border: 1px solid #eee;
+    //     cursor: pointer;
+    //     font-family: var(--font-family);
+    //     font-size: 14px;
+    //     font-weight: 500;
+    //     background-color: #eee;
+    //     color: #592d74;
+    //     margin-top: 20px;
 
-    }
-    .ng-btn:hover {
-        background-color: #c8c8c8;
-    }
-    .ng-btn:active {
-        transform: scale(0.97);
-    }
+    // }
+    // .ng-btn:hover {
+    //     background-color: #c8c8c8;
+    // }
+    // .ng-btn:active {
+    //     transform: scale(0.97);
+    // }
 
-    .ng-text {
-        color: #bbb;
-        font-size: 12px;
-        text-decoration: underline;
-        margin-top: 20px;
-    }
+    // .ng-text {
+    //     color: #bbb;
+    //     font-size: 12px;
+    //     text-decoration: underline;
+    //     margin-top: 20px;
+    // }
 
-    .ng-btn-signup {
-        height: 25px;
-        border-radius: 10px;
-        background-color: #bbb;
-        margin-top: 20px;
+    // .ng-btn-signup {
+    //     height: 25px;
+    //     border-radius: 10px;
+    //     background-color: #bbb;
+    //     margin-top: 20px;
+    // }
+.figure {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    
+        .slide_area {
+            width: 400%;
+            display: flex;
+          
+    
+            .slide {
+                width: 25%;
+                transition: all 1s ease-in;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+                
+           
+    
+        }
+    
     }
+    
+    
     
 }
-
+.first{
+    margin-left:-25%;
+}
 .ng-form-n2 {
     transition: opacity 5s ease-in-out;
     background-color: green;
