--- a/src/app/shared/component/form-signup/form-signup.component.html
+++ b/src/app/shared/component/form-signup/form-signup.component.html
@@ -26,7 +26,7 @@
                         <button class="ng-btn ng-btn-proximo" (click)="btnProximo()" >Proximo</button>
                     </div>
                 </div>
-                <div #slide class="slide area2">
+                <div #slide class="slide">
                     <div #slide2 class="ng-form-n1">
             
                         <section class="ng-title">
