--- a/src/app/shared/component/form-signup/form-signup.component.html
+++ b/src/app/shared/component/form-signup/form-signup.component.html
@@ -5,7 +5,7 @@
                 <form action="" [formGroup]="form.groupform">
                     <div class="slide_area" #elemento>
 
-                        <div #slide class="slide">
+                        <div #slide class="slide" >
                             <div #slide1 class="ng-form-n1">
 
                                 <section class="ng-title">
@@ -13,22 +13,24 @@
                                 </section>
                                 <fieldset class="ng-fieldset">
                                     <legend>Nome Completo</legend>
-                                    <input type="text" class="ng-input" placeholder="Nome Completo..."
+                                    <input type="text" class="ng-input" placeholder="Nome Completo..." #form1 autofocus="on" (keydown.enter)="mudarCampo(form2)"
                                         formControlName="name">
                                 </fieldset>
 
                                 <fieldset class="ng-fieldset">
                                     <legend>Número de telefone</legend>
-                                    <input type="text" class="ng-input" placeholder="Nº de telefone..."
+                                    <input type="text" class="ng-input" placeholder="Nº de telefone..." #form2  (keydown.enter)="mudarCampo(form3)"
                                         formControlName="telefone">
                                 </fieldset>
 
                                 <fieldset class="ng-fieldset">
                                     <legend>Email</legend>
-                                    <input type="email" class="ng-input" placeholder="Email" formControlName="email">
+                                    <input type="email" class="ng-input" placeholder="Email" formControlName="email" #form3 (keydown.enter)="MudaProximo()" >
                                 </fieldset>
+                             
+                                <button  mat-raised-button [disabled]="!isRequiredNext()" class="ng-btn ng-btn-proximo" (click)="btnProximo()">Proximo</button>
 
-                                <button class="ng-btn ng-btn-proximo" (click)="btnProximo()">Proximo</button>
+                                
                             </div>
                         </div>
                         <div #slide class="slide">
@@ -55,25 +57,25 @@
 
                                 <fieldset class="ng-fieldset">
                                     <legend>CPF</legend>
-                                    <input type="text" class="ng-input" placeholder="Nome Completo..."
+                                    <input type="text" class="ng-input" autofocus="on"  #formSlide2_1 (keydown.enter)="enterSlide2(formSlide2_2)" placeholder="Nome Completo..."
                                         formControlName="cpf">
                                 </fieldset>
 
                                 <fieldset class="ng-fieldset">
                                     <legend>Senha</legend>
-                                    <input type="text" class="ng-input" placeholder="Nº de telefone..."
+                                    <input type="text" class="ng-input" #formSlide2_2 placeholder="Nº de telefone..." (keydown.enter)="enterSlide2(formSlide2_3)"
                                         formControlName="password">
                                 </fieldset>
 
                                 <fieldset class="ng-fieldset">
                                     <legend>Confirme a senha</legend>
-                                    <input type="email" class="ng-input" placeholder="Email"
+                                    <input type="email" class="ng-input" #formSlide2_3 placeholder="Confirme senha" (keydown.enter)="save()"
                                         formControlName="repeteSenha">
                                 </fieldset>
 
                                 <section class="ng-section-btn">
                                     <button class="ng-btn ng-btn-proximo" (click)="btnVoltar()">Voltar</button>
-                                    <button class="ng-btn ng-btn-cadastrar" (click)="cadastro()">Cadastrar</button>
+                                    <button class="ng-btn ng-btn-cadastrar"  [disabled]="!isRequiredToRegistre()" mat-raised-button  (click)="cadastro()">Cadastrar</button>
                                 </section>
                             </div>
                         </div>
