--- a/src/app/features/pages/home/foother/footer.component.html
+++ b/src/app/features/pages/home/foother/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="ng-footer">
-    <small class="ng-footer-small"> copyright 2025 em desenvolvimento </small>
+    <small class="ng-footer-small"> &commat;Copyright 2025 em desenvolvimento </small>
 </footer>
