--- a/src/app/shared/component/form-signup/form-signup.component.scss
+++ b/src/app/shared/component/form-signup/form-signup.component.scss
@@ -2,10 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 450px;
+    width: 380px;
+    padding: 0 10x;
     height: 100%;
     overflow: hidden;
-
 
     .figure {
         margin: 0;
@@ -18,7 +18,7 @@
 
             .slide {
                 width: 25%;
-                transition: all 0.5s ease-in;
+                transition: all 0.3s ease-in;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -27,37 +27,39 @@
                 .ng-form-n1 {
                     display: flex;
                     justify-content: center;
-                    align-items: center;   
-                    flex-direction: column; 
-                    .ng-data{
+                    align-items: center;
+                    flex-direction: column;
+
+                    .ng-data {
                         display: flex;
                         gap: 7px;
                     }
+
                     .ng-title {
                         text-align: center;
                         color: #ddd;
                         margin-bottom: 10px;
-    
+
                     }
-    
+
                     .ng-title span {
                         font-size: 15px;
                         margin-bottom: 20px;
                     }
-    
+
                     .ng-fieldset {
-                        width: 350px;
+                        width: 280px;
                         padding: 7px;
                         border-radius: 5px;
                         margin-top: 20px;
-    
-    
+
+
                         legend {
                             font-size: 12px;
                             font-weight: 500;
                             color: #ddd;
                         }
-    
+
                         .ng-input {
                             background-color: transparent;
                             outline: none;
@@ -67,25 +69,25 @@
                             font-size: 12px;
                             color: #eee;
                         }
-    
-    
-    
+
+
+
                     }
-    
+
                     .ng-error {
                         width: 100%;
                         font-size: 12px;
                         color: #FF8401;
                         padding: 2px 5px;
                     }
-    
+
                     .ng-section-btn {
                         display: flex;
                         gap: 10px;
-    
+
                     }
-    
-    
+
+
                     .ng-btn {
                         width: 100%;
                         height: 35px;
@@ -95,27 +97,27 @@
                         font-family: var(--font-family);
                         font-size: 14px;
                         font-weight: 500;
-                        
+
                         color: #592d74;
                         margin-top: 20px;
-    
+
                     }
-    
+
                     .ng-btn:hover {
                         background-color: #c8c8c8;
                     }
-    
+
                     .ng-btn:active {
                         transform: scale(0.97);
                     }
-    
+
                     .ng-text {
                         color: #bbb;
                         font-size: 12px;
                         text-decoration: underline;
                         margin-top: 20px;
                     }
-    
+
                     .ng-btn-signup {
                         height: 25px;
                         border-radius: 10px;
@@ -124,7 +126,7 @@
                     }
                 }
 
-                
+
             }
 
 
@@ -136,11 +138,55 @@
 
 
 }
-.show{
+
+.show {
     width: 25%;
     padding: 30px;
 }
+
 .first {
     padding: 30px;
     margin-left: -25%;
+}
+
+@media screen and (min-width:465px) {
+    .ng-form {
+        width: 450px;
+
+        .figure {
+            .slide_area {
+                .slide {
+                    .ng-form-n1 {
+
+                        .ng-fieldset {
+                            width: 350px;
+
+                            legend {
+                                font-size: 12px;
+                            }
+
+                            .ng-input {
+                                background-color: transparent;
+
+                            }
+
+
+
+                        }
+
+                    }
+
+
+                }
+
+
+
+            }
+
+        }
+
+
+
+    }
+
 }
