integrando api de cadastro de usuario

--- a/src/app/features/pages/auth/signup/signup.component.html
+++ b/src/app/features/pages/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="ng-main">
     <div class="ng-logo" (click)="pageCategorias()"></div>
-    <app-form-signup></app-form-signup>
+    <app-form-signup (registroBtn)="enviar($event)"></app-form-signup>
     <app-footer></app-footer>
 </div>
