Editando o footer e criando page-container

--- a/src/app/features/pages/auth/signin/signin.component.html
+++ b/src/app/features/pages/auth/signin/signin.component.html
@@ -1,6 +1,9 @@
-<div class="ng-main">
-    <div class="ng-logo" (click)="pageCategorias()"></div>
-    <app-formModal>
-        <app-form-login></app-form-login></app-formModal>
+<app-page-container>
+    <div class="ng-main">
+        <div class="ng-logo" (click)="pageCategorias()"></div>
+        <app-formModal>
+            <app-form-login></app-form-login>
+        </app-formModal>
+    </div>
     <app-footer></app-footer>
-</div>
+</app-page-container>
