--- a/src/app/features/pages/categorias/categorias.component.html
+++ b/src/app/features/pages/categorias/categorias.component.html
@@ -1,29 +1,32 @@
-<div class="main">
-    <app-header [carrinho]="true" class="s" categoria="categoria"></app-header>
-    <div class="ng-categoria">
-        <section class="container-area">
-            <div class="carrossel">
-                <app-carrossel></app-carrossel>
-            </div>
-            <div class="ng-itens">
-                <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
-                <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
-                <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
-                <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
-                <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
-                <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
-                <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
-                <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
+<app-page-container>
+    <div class="main">
+        <app-header [carrinho]="true" class="s" categoria="categoria"></app-header>
+        <div class="ng-categoria">
+            <section class="container-area">
+                <div class="carrossel">
+                    <app-carrossel></app-carrossel>
+                </div>
+                <div class="ng-itens">
+                    <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
+                    <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
+                    <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
+                    <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
+                    <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
+                    <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
+                    <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
+                    <app-opcoes-categoria [url]="img"></app-opcoes-categoria>
 
+                </div>
+            </section>
+            <div class="propaganda">
+                <app-mais-postados titulo="Em destaque"></app-mais-postados>
+                <app-mais-postados titulo="Mais procurados"></app-mais-postados>
+                <app-mais-postados titulo="Promocão"></app-mais-postados>
+                <app-mais-postados titulo="Esgotado"></app-mais-postados>
             </div>
-        </section>
-        <div class="propaganda">
-            <app-mais-postados titulo="Em destaque"></app-mais-postados>
-            <app-mais-postados titulo="Mais procurados"></app-mais-postados>
-            <app-mais-postados titulo="Promocão"></app-mais-postados>
-            <app-mais-postados titulo="Esgotado"></app-mais-postados>
+
+
         </div>
-
-
     </div>
-</div>
+    <app-footer></app-footer>
+</app-page-container>
