--- a/src/app/features/pages/home/foother/footer.component.html
+++ b/src/app/features/pages/home/foother/footer.component.html
@@ -1,3 +1,47 @@
 <footer class="ng-footer">
+    <section class="ng-header-footer">
+        <div class="ng-logo"></div>
+        <button mat-raised-button class="btn-footer">Nossos Planos</button>
+    </section>
+    <section>
+        <div class="ng-column-footer">
+            <h3>Atendimento ao Cliente</h3>
+            <p>Central de Ajuda</p>
+            <p>Como Comprar no Zapdai</p>
+            <p>Como Cadastrar seu Negocio</p>
+            <p>Fale Conosco</p>
+        </div>        
+        <div class="ng-column-footer">
+            <h3>Sobre Nós</h3>
+            <p>Políticas de Privicidades</p>
+            <p>Planos e Preços</p>
+        </div>
+        <div class="ng-column-footer">
+            <h3>Serviços da Plataforma</h3>
+            <p>Cardápio Digital</p>
+            <p>Sistema de Pedidos</p>
+            <p>Serviços de Entretas</p>
+            <p>Atendente Virtual do WhatsApp</p>
+            <p>Ver todos Serviços Disponiveis</p>
+        </div>        
+        <div class="ng-column-footer ng-column-footer3">
+            <h3>Redes Sociais</h3>
+            <div class="ng-icon-social-media">
+                <img src="/logos/instagram_logo.png" alt="Instagram Zapdai" class="ng-img-socialMedia">
+                <img src="/logos/whatsapp_logo.png" alt="WhatsApp Zapdai" class="ng-img-socialMedia">
+                <img src="/logos/youtube_logo.png" alt="YouTube Zapdai" class="ng-img-socialMedia">
+            </div>
+            <section class="ng-signup">
+                <button class="btn1" (click)="pageSignin()">
+                    Login
+                </button>
+                <button class="btn2" (click)="pageSignup()">
+                    Signin
+                </button>
+            </section>
+        </div>    
+    </section>
+    <hr>
     <small class="ng-footer-small"> &commat;Copyright 2025 em desenvolvimento </small>
+    <div></div>
 </footer>
