--- a/src/app/features/pages/auth/signin/signin.component.scss
+++ b/src/app/features/pages/auth/signin/signin.component.scss
@@ -2,10 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex: 1;
-    height: 100vh;
     flex-direction: column;
-    gap: 10px;
+    height: 100vh;
+    gap: 0 40px;
 
     .ng-logo {
         width: 150px;
@@ -18,6 +17,7 @@
     }
     
 }
+
 
 .mudaCor {
     border: 1px solid #FFE5C9;
