Corrigindo Footer na Page Categorias / Removendo Foote de Signin e Signup

--- a/src/app/features/pages/auth/signin/signin.component.html
+++ b/src/app/features/pages/auth/signin/signin.component.html
@@ -4,6 +4,6 @@
         <app-formModal>
             <app-form-login></app-form-login>
         </app-formModal>
+        <app-footer color="ng-footer-color"></app-footer>
     </div>
-    <app-footer></app-footer>
 </app-page-container>
