--- a/src/app/features/pages/categorias/categorias.component.html
+++ b/src/app/features/pages/categorias/categorias.component.html
@@ -27,6 +27,6 @@
 
 
         </div>
+        <app-footer [footerActive]="true"></app-footer>
     </div>
-    <app-footer></app-footer>
 </app-page-container>
