--- a/src/app/features/pages/home/header/header.component.scss
+++ b/src/app/features/pages/home/header/header.component.scss
@@ -1,10 +1,10 @@
 @media screen and (min-width:700px) {
     .categoria{
-        background-color:#026E81;
+        background-color:#0a1630;
         padding: 0 40px;
         form input{
             border-radius: 5px;
-            height: 35px;
+            height: 30px;
         }
         .search{
             .icone:active{
@@ -79,7 +79,7 @@
                 display: flex;
                 align-items: center;
                 background-color: #ffffff;
-                padding: 5px 10px;
+                padding: 0 10px;
                 border-radius: 5px;
                 border: 1px solid #cac9c9;
                 .ng-input{
