--- a/src/app/features/pages/categorias/categorias.component.scss
+++ b/src/app/features/pages/categorias/categorias.component.scss
@@ -1,6 +1,7 @@
 .main{
     background-color: #F2F2F2;
     overflow: auto;
+    width: 100%;
     height: 100vh;
     scrollbar-width: thin;
 .ng-categoria{
