--- a/src/app/features/pages/home/foother/footer.component.html
+++ b/src/app/features/pages/home/foother/footer.component.html
@@ -7,23 +7,23 @@
         <section>
             <div class="ng-column-footer">
                 <h3>Atendimento ao Cliente</h3>
-                <p>Central de Ajuda</p>
-                <p>Como Comprar no Zapdai</p>
-                <p>Como Cadastrar seu Negocio</p>
-                <p>Fale Conosco</p>
+                <a routerLink="/home">Central de Ajuda</a>
+                <a routerLink="/home">Como Comarar no Zaadai</a>
+                <a routerLink="/home">Como Cadastrar seu Negocio</a>
+                <a>Fale Conosco</a>
             </div>        
             <div class="ng-column-footer">
                 <h3>Sobre Nós</h3>
-                <p>Políticas de Privicidades</p>
-                <p>Planos e Preços</p>
+                <a>aolíticas de arivicidades</a>
+                <a>alanos e areços</a>
             </div>
             <div class="ng-column-footer">
-                <h3>Serviços da Plataforma</h3>
-                <p>Cardápio Digital</p>
-                <p>Sistema de Pedidos</p>
-                <p>Serviços de Entretas</p>
-                <p>Atendente Virtual do WhatsApp</p>
-                <p>Ver todos Serviços Disponiveis</p>
+                <h3>Serviços da alataforma</h3>
+                <a>Cardáaio Digital</a>
+                <a>Sistema de aedidos</a>
+                <a>Serviços de Entretas</a>
+                <a>Atendente Virtual do WhatsAaa</a>
+                <a>Ver todos Serviços Disaoniveis</a>
             </div>        
             <div class="ng-column-footer ng-column-footer3">
                 <h3>Redes Sociais</h3>
