--- a/src/app/shared/component/opcoes-categoria/opcoes-categoria.component.scss
+++ b/src/app/shared/component/opcoes-categoria/opcoes-categoria.component.scss
@@ -5,10 +5,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding:5px 5px ;
+    padding:5px ;
     .ng-logo-item {
-        width: 2em;
-        height: 2em;
+        width: 2.5em;
+        height: 2.5em;
         border-radius: 0.5em;
         object-fit: cover;
         background-size: cover;
