--- a/src/app/shared/component/carrossel/carrossel.component.scss
+++ b/src/app/shared/component/carrossel/carrossel.component.scss
@@ -13,8 +13,8 @@
 
         .slide {
             width: 25%;
-            height: 250px;
-            transition: all 1s ease-in;
+            height: 290px;
+            transition: all 2s ease-in;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -24,15 +24,18 @@
             }
 
             .slide_text {
-                background-image: url("/logo.png");
+                background-image: url("https://img.cdndsgni.com/preview/10109390-m.jpg");
                 background-position: center;
-                background-size: cover;
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-position: top center;
                 width: 100%;
-                height: 100%;
+                height: 100%; /* altura proporcional à tela */
                 display: flex;
                 flex-direction: column;
-                margin: 20px 8px;
-                padding: 10px;
+                justify-content: center;
+                align-items: center;
+                padding: 20px 10px;
                 text-align: center;
 
                 img {
